circle to line animation

--- a/example/src/main/res/layout/activity_vector_test.xml
+++ b/example/src/main/res/layout/activity_vector_test.xml
@@ -12,6 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@drawable/arrow_start"/>
+        android:src="@drawable/avd_circle"/>
 
 </RelativeLayout>
