--- a/example/src/main/res/layout/activity_vector_test.xml
+++ b/example/src/main/res/layout/activity_vector_test.xml
@@ -11,7 +11,6 @@
         android:id="@+id/img_vector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/avd_start"/>
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
