--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <is.arontibo.library.ProgressDownload
-        android:id="@+id/progress_download"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <is.arontibo.library.ElasticDownloadView
+        android:id="@+id/elastic_download_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
