--- a/elasticdownload/src/main/res/anim-v21/morph_arrow.xml
+++ b/elasticdownload/src/main/res/anim-v21/morph_arrow.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
         android:duration="@integer/enter_animation_duration"
-        android:interpolator="@android:anim/anticipate_interpolator"
         android:propertyName="pathData"
         android:valueFrom="@string/arrow_data"
         android:valueTo="@string/bubble_data"
-        app:vc_valueType="pathType" />
+        android:valueType="pathType"
+        android:interpolator="@android:anim/anticipate_interpolator"/>
 
 </set>
