Backport to API8 (modifications of the VectorCompat lib + add nineoldandroids to the library)

--- a/elasticdownload/src/main/res/anim-v21/morph_circle.xml
+++ b/elasticdownload/src/main/res/anim-v21/morph_circle.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <objectAnimator
-        android:duration="@integer/enter_animation_duration"
-        android:interpolator="@android:anim/accelerate_interpolator"
-        android:propertyName="pathData"
-        android:valueFrom="@string/circle_data"
-        android:valueTo="@string/line_data"
-        android:valueType="pathType" />
-
-</set>
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@integer/enter_animation_duration"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:propertyName="pathData"
+    android:valueFrom="@string/circle_data"
+    android:valueTo="@string/line_data"
+    android:valueType="pathType"></objectAnimator>
